syntax = "proto3";

package todo;

option go_package = "github.com/todoGo/todo/todo";

message getTodoParams{}

message addTodoParams {
  string task = 1;
}

message deleteTodoParams {
  string id = 1;
}

message markTodoParams {
  string id = 1;
  bool completed = 2;
}



message todoObject {
  string id = 1;
  string task = 2;
  bool completed = 3;
  bool deleted = 4;
}

message todoResponse {
  todoObject todo = 1;
}

message deleteResponse {
  string message = 1;
}  

message markResponse {
  string message = 1;
}

service todoService {
  rpc addTodo(addTodoParams) returns (todoObject) {}
  rpc deleteTodo(deleteTodoParams) returns (deleteResponse) {}
  rpc getTodos(getTodoParams) returns (stream todoResponse) {}
  rpc markTodo(markTodoParams) returns (markResponse) {}
}
